...
    <string name="view">View</string>
    <string name="yes">Yes</string>
    <string name="account">Account</string>
    <string name="account_created_success">Your new account has been created!</string>
    <string name="set_bitwarden_as_passkey_manager_description">Set Bitwarden as your passkey provider in device settings.</string>
    <string name="avoid_ambiguous_characters">Avoid ambiguous characters</string>
    <string name="bitwarden_autofill_service">Bitwarden Autofill Service</string>
    <string name="change_master_password">Change master password</string>
    <string name="close">Close</string>
    <string name="continue_text">Continue</string>
    <string name="create_account">Create account</string>
    <string name="create_an_account">Create an account</string>
    <string name="edit_item">Edit item</string>
    <string name="edit_login">Edit login</string>
    <string name="edit_card">Edit card</string>
...
    <string name="web_vault_url">Web vault server URL</string>
    <string name="custom_fields">Custom fields</string>
    <string name="copy_number">Copy number</string>
    <string name="copy_security_code">Copy security code</string>
    <string name="number">Number</string>
    <string name="security_code">Security code</string>
    <string name="scan_card">Scan card</string>
    <string name="scan_card_instruction">Position your card within the frame to scan it.</string>
    <string name="type_card">Card</string>
    <string name="type_identity">Identity</string>
    <string name="type_login">Login</string>
    <string name="type_secure_note">Secure note</string>
    <string name="address1">Address 1</string>
...
