package com.x8bit.bitwarden.ui.vault.feature.addedit

import androidx.compose.ui.geometry.Offset
import androidx.compose.ui.semantics.SemanticsActions
import androidx.compose.ui.semantics.SemanticsProperties
import androidx.compose.ui.test.SemanticsMatcher
import androidx.compose.ui.test.assert
import androidx.compose.ui.test.assertCountEquals
import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.assertIsEnabled
import androidx.compose.ui.test.assertIsFocused
import androidx.compose.ui.test.assertIsNotDisplayed
import androidx.compose.ui.test.assertIsNotEnabled
import androidx.compose.ui.test.assertIsOff
import androidx.compose.ui.test.assertIsOn
import androidx.compose.ui.test.assertTextContains
import androidx.compose.ui.test.assertTextEquals
import androidx.compose.ui.test.click
import androidx.compose.ui.test.filter
import androidx.compose.ui.test.filterToOne
import androidx.compose.ui.test.hasAnyAncestor
import androidx.compose.ui.test.hasAnySibling
import androidx.compose.ui.test.hasContentDescription
import androidx.compose.ui.test.hasSetTextAction
import androidx.compose.ui.test.hasText
import androidx.compose.ui.test.isDialog
import androidx.compose.ui.test.isEditable
import androidx.compose.ui.test.isPopup
import androidx.compose.ui.test.onAllNodesWithContentDescription
import androidx.compose.ui.test.onAllNodesWithText
import androidx.compose.ui.test.onChildren
import androidx.compose.ui.test.onFirst
import androidx.compose.ui.test.onLast
import androidx.compose.ui.test.onNodeWithContentDescription
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performScrollTo
import androidx.compose.ui.test.performSemanticsAction
import androidx.compose.ui.test.performTextClearance
import androidx.compose.ui.test.performTextInput
import androidx.compose.ui.test.performTouchInput
import androidx.core.net.toUri
import com.bitwarden.core.data.repository.util.bufferedMutableSharedFlow
import com.bitwarden.core.data.util.advanceTimeByAndRunCurrent
import com.bitwarden.ui.platform.components.snackbar.model.BitwardenSnackbarData
import com.bitwarden.ui.platform.manager.IntentManager
import com.bitwarden.ui.platform.manager.exit.ExitManager
import com.bitwarden.ui.util.asText
import com.bitwarden.ui.util.assertNoDialogExists
import com.bitwarden.ui.util.assertScrollableNodeDoesNotExist
import com.bitwarden.ui.util.isBottomSheet
import com.bitwarden.ui.util.isCoachMarkToolTip
import com.bitwarden.ui.util.isProgressBar
import com.bitwarden.ui.util.onAllNodesWithContentDescriptionAfterScroll
import com.bitwarden.ui.util.onAllNodesWithTextAfterScroll
import com.bitwarden.ui.util.onNodeWithContentDescriptionAfterScroll
import com.bitwarden.ui.util.onNodeWithTextAfterScroll
import com.bitwarden.vault.UriMatchType
import com.x8bit.bitwarden.data.vault.datasource.sdk.model.createMockCipherView
import com.x8bit.bitwarden.ui.credentials.manager.CredentialProviderCompletionManager
import com.x8bit.bitwarden.ui.credentials.manager.model.CreateCredentialResult
import com.x8bit.bitwarden.ui.platform.base.BitwardenComposeTest
import com.x8bit.bitwarden.ui.platform.manager.biometrics.BiometricsManager
import com.x8bit.bitwarden.ui.platform.manager.permissions.FakePermissionManager
import com.x8bit.bitwarden.ui.tools.feature.generator.model.GeneratorMode
import com.x8bit.bitwarden.ui.vault.feature.addedit.model.CustomFieldAction
import com.x8bit.bitwarden.ui.vault.feature.addedit.model.CustomFieldType
import com.x8bit.bitwarden.ui.vault.feature.addedit.model.UriItem
import com.x8bit.bitwarden.ui.vault.model.VaultAddEditType
import com.x8bit.bitwarden.ui.vault.model.VaultBankAccountType
import com.x8bit.bitwarden.ui.vault.model.VaultCardBrand
import com.x8bit.bitwarden.ui.vault.model.VaultCardExpirationMonth
import com.x8bit.bitwarden.ui.vault.model.VaultCollection
import com.x8bit.bitwarden.ui.vault.model.VaultIdentityTitle
import com.x8bit.bitwarden.ui.vault.model.VaultItemCipherType
import io.mockk.every
import io.mockk.invoke
import io.mockk.just
import io.mockk.mockk
import io.mockk.runs
import io.mockk.verify
import kotlinx.coroutines.flow.MutableStateFlow
import kotlinx.coroutines.flow.update
import kotlinx.coroutines.test.runTest
import org.junit.Assert.assertEquals
import org.junit.Assert.assertTrue
import org.junit.Before
import org.junit.Test
import com.x8bit.bitwarden.data.platform.repository.model.UriMatchType as UriMatchTypeModel

@Suppress("LargeClass")
class VaultAddEditScreenTest : BitwardenComposeTest() {

    private var onNavigateBackCalled = false
    private var onNavigateQrCodeScanScreenCalled = false
    private var onNavigateToManualCodeEntryScreenCalled = false
    private var onNavigateToGeneratorModalType: GeneratorMode.Modal? = null
    private var onNavigateToAttachmentsId: String? = null
    private var onNavigateToCardScanScreenCalled = false
    private var onNavigateToMoveToOrganizationId: String? = null
    private var onNavigateToPlanCalled = false

    private val mutableEventFlow = bufferedMutableSharedFlow<VaultAddEditEvent>()
    private val mutableStateFlow = MutableStateFlow(DEFAULT_STATE_LOGIN)

    private val fakePermissionManager: FakePermissionManager = FakePermissionManager()

    private val viewModel = mockk<VaultAddEditViewModel>(relaxed = true) {
        every { eventFlow } returns mutableEventFlow
        every { stateFlow } returns mutableStateFlow
    }
    private val exitManager: ExitManager = mockk {
        every { exitApplication() } just runs
    }
    private val intentManager: IntentManager = mockk {
        every { launchUri(any()) } just runs
    }
    private val credentialProviderCompletionManager: CredentialProviderCompletionManager = mockk {
        every { completeCredentialRegistration(any()) } just runs
    }
    private val biometricsManager: BiometricsManager = mockk {
        every { isUserVerificationSupported } returns true
    }

    @Before
    fun setup() {
        setContent(
            permissionsManager = fakePermissionManager,
            exitManager = exitManager,
            intentManager = intentManager,
            credentialProviderCompletionManager = credentialProviderCompletionManager,
            biometricsManager = biometricsManager,
        ) {
            VaultAddEditScreen(
                onNavigateBack = { onNavigateBackCalled = true },
                onNavigateToQrCodeScanScreen = { onNavigateQrCodeScanScreenCalled = true },
                onNavigateToManualCodeEntryScreen = {
                    onNavigateToManualCodeEntryScreenCalled = true
                },
                onNavigateToGeneratorModal = { onNavigateToGeneratorModalType = it },
                onNavigateToAttachments = { onNavigateToAttachmentsId = it },
                onNavigateToMoveToOrganization = { id, _ -> onNavigateToMoveToOrganizationId = id },
                onNavigateToCardScanScreen = { onNavigateToCardScanScreenCalled = true },
                onNavigateToPlan = { onNavigateToPlanCalled = true },
                viewModel = viewModel,
            )
        }
    }

    @Test
    fun `on ShowSnackbar should display snackbar content`() {
        val message = "message"
        val data = BitwardenSnackbarData(message = message.asText())
        composeTestRule.onNodeWithText(text = message).assertDoesNotExist()
        mutableEventFlow.tryEmit(VaultAddEditEvent.ShowSnackbar(data = data))
        composeTestRule.onNodeWithText(text = message).assertIsDisplayed()
    }

    @Test
    fun `on ExitApp event should call the exitApplication of ExitManager`() {
        mutableEventFlow.tryEmit(VaultAddEditEvent.ExitApp)
        verify { exitManager.exitApplication() }
    }

    @Test
    fun `on NavigateBack event should invoke onNavigateBack`() {
        mutableEventFlow.tryEmit(VaultAddEditEvent.NavigateBack)
        assertTrue(onNavigateBackCalled)
    }

    @Test
    fun `on NavigateToTooltipUri Event should invoke IntentManager`() {
        mutableEventFlow.tryEmit(VaultAddEditEvent.NavigateToTooltipUri)
        verify {
            intentManager.launchUri(
                "https://bitwarden.com/help/managing-items/#protect-individual-items".toUri(),
            )
        }
    }

    @Test
    fun `on NavigateToAuthenticatorKeyTooltipUri Event should invoke IntentManager`() {
        mutableEventFlow.tryEmit(VaultAddEditEvent.NavigateToAuthenticatorKeyTooltipUri)
        verify {
            intentManager.launchUri(
                "https://bitwarden.com/help/integrated-authenticator".toUri(),
            )
        }
    }

    @Test
    fun `on NavigateToQrCodeScan event should invoke NavigateToQrCodeScan`() {
        mutableEventFlow.tryEmit(VaultAddEditEvent.NavigateToQrCodeScan)
        assertTrue(onNavigateQrCodeScanScreenCalled)
    }

    @Test
    fun `on NavigateToCardScan event should invoke onNavigateToCardScanScreen`() {
        mutableEventFlow.tryEmit(VaultAddEditEvent.NavigateToCardScan)
        assertTrue(onNavigateToCardScanScreenCalled)
    }

    @Test
    fun `on FocusCardHolderName event should focus field`() {
        mutableStateFlow.value = DEFAULT_STATE_CARD
        composeTestRule.waitForIdle()
        mutableEventFlow.tryEmit(VaultAddEditEvent.FocusCardHolderName)
        composeTestRule.waitForIdle()
        composeTestRule
            .onNodeWithTag("CardholderNameEntry")
            .performScrollTo()
            .assertIsFocused()
    }

    @Test
    fun `scan card button should be displayed when isCardScannerEnabled is true`() {
        mutableStateFlow.value = DEFAULT_STATE_CARD.copy(
            isCardScannerEnabled = true,
        )
        composeTestRule
            .onNodeWithText("Scan card")
            .performScrollTo()
            .assertIsDisplayed()
    }

    @Test
    fun `scan card button should not be displayed when isCardScannerEnabled is false`() {
        mutableStateFlow.value = DEFAULT_STATE_CARD.copy(
            isCardScannerEnabled = false,
        )
        composeTestRule
            .onNodeWithText("Scan card")
            .assertDoesNotExist()
    }

    @Test
    fun `on NavigateToManualCodeEntry event should invoke NavigateToManualCodeEntry`() {
        mutableEventFlow.tryEmit(VaultAddEditEvent.NavigateToManualCodeEntry)
        assertTrue(onNavigateToManualCodeEntryScreenCalled)
    }

    @Suppress("MaxLineLength")
    @Test
    fun `on NavigateToGeneratorModal event in password mode should invoke NavigateToGeneratorModal with Password Generator Mode `() {
        mutableEventFlow.tryEmit(
            VaultAddEditEvent.NavigateToGeneratorModal(
                generatorMode = GeneratorMode.Modal.Password,
            ),
        )
        assertEquals(GeneratorMode.Modal.Password, onNavigateToGeneratorModalType)
    }

    @Test
    fun `on NavigateToAttachments event should invoke onNavigateToAttachments`() {
        val cipherId = "cipherId-1234"
        mutableEventFlow.tryEmit(VaultAddEditEvent.NavigateToAttachments(cipherId))
        assertEquals(cipherId, onNavigateToAttachmentsId)
    }

    @Test
    @Suppress("MaxLineLength")
    fun `on NavigateToMoveToOrganization event should invoke onNavigateToMoveToOrganization with the correct ID`() {
        val cipherId = "cipherId-1234"
        mutableEventFlow.tryEmit(VaultAddEditEvent.NavigateToMoveToOrganization(cipherId))
        assertEquals(cipherId, onNavigateToMoveToOrganizationId)
    }

    @Suppress("MaxLineLength")
    @Test
    fun `on NavigateToGeneratorModal event in username mode should invoke NavigateToGeneratorModal with Username Generator Mode `() {
        val website = "bitwarden.com"
        mutableEventFlow.tryEmit(
            VaultAddEditEvent.NavigateToGeneratorModal(
                generatorMode = GeneratorMode.Modal.Username(website),
            ),
        )
        assertEquals(GeneratorMode.Modal.Username(website), onNavigateToGeneratorModalType)
    }

    @Test
    fun `on NavigateToPlanModal event should invoke onNavigateToPlan`() {
        mutableEventFlow.tryEmit(VaultAddEditEvent.NavigateToPlanModal)
        assertTrue(onNavigateToPlanCalled)
    }

    @Test
    fun `on CompleteCredentialCreate event should invoke CredentialProviderCompletionManager`() {
        val result = CreateCredentialResult.Success.Fido2CredentialRegistered(
            responseJson = "mockRegistrationResponse",
        )
        mutableEventFlow.tryEmit(VaultAddEditEvent.CompleteCredentialRegistration(result = result))
        verify { credentialProviderCompletionManager.completeCredentialRegistration(result) }
    }

    @Test
    fun `CredentialError dialog should display based on state`() {
        mutableStateFlow.value = DEFAULT_STATE_LOGIN.copy(
            dialog = VaultAddEditState.DialogState.CredentialError("mockMessage".asText()),
        )

        composeTestRule
            .onAllNodesWithText("mockMessage")
            .filterToOne(hasAnyAncestor(isDialog()))
            .assertIsDisplayed()
    }

    @Test
    fun `ArchiveRequiresPremium dialog should display based on state`() {
        composeTestRule.assertNoDialogExists()
        mutableStateFlow.value = DEFAULT_STATE_LOGIN.copy(
            dialog = VaultAddEditState.DialogState.ArchiveRequiresPremium,
        )

        composeTestRule
            .onNodeWithText(text = "Archive unavailable")
            .assert(hasAnyAncestor(isDialog()))
            .assertIsDisplayed()
    }

    @Suppress("MaxLineLength")
    @Test
    fun `ArchiveRequiresPremium dialog on upgrade to Premium click should emit UpgradeToPremiumClick`() {
        composeTestRule.assertNoDialogExists()
        mutableStateFlow.value = DEFAULT_STATE_LOGIN.copy(
            dialog = VaultAddEditState.DialogState.ArchiveRequiresPremium,
        )

        composeTestRule
            .onNodeWithText(text = "Upgrade to Premium")
            .assert(hasAnyAncestor(isDialog()))
            .performClick()

        verify(exactly = 1) {
            viewModel.trySendAction(VaultAddEditAction.Common.UpgradeToPremiumClick)
        }
    }

    @Test
    fun `fido2 master password prompt dialog should display based on state`() {
        val dialogTitle = "Master password confirmation"
        composeTestRule.onNode(isDialog()).assertDoesNotExist()
        composeTestRule.onNodeWithText(dialogTitle).assertDoesNotExist()

        mutableStateFlow.update {
            it.copy(dialog = VaultAddEditState.DialogState.Fido2MasterPasswordPrompt)
        }

        composeTestRule
            .onNodeWithText(dialogTitle)
            .assertIsDisplayed()
            .assert(hasAnyAncestor(isDialog()))

        composeTestRule
            .onAllNodesWithText(text = "Cancel")
            .filterToOne(hasAnyAncestor(isDialog()))
            .performClick()
        verify {
            viewModel.trySendAction(
                VaultAddEditAction.Common.DismissFido2VerificationDialogClick,
            )
        }

        composeTestRule
            .onAllNodesWithText(text = "Master password")
            .filterToOne(hasAnyAncestor(isDialog()))
            .performTextInput("password")
        composeTestRule
            .onAllNodesWithText(text = "Submit")
            .filterToOne(hasAnyAncestor(isDialog()))
            .performClick()

        verify {
            viewModel.trySendAction(
                VaultAddEditAction.Common.MasterPasswordFido2VerificationSubmit(
                    password = "password",
                ),
            )
        }
    }

    @Test
    fun `fido2 master password error dialog should display based on state`() {
        val dialogMessage = "Invalid master password. Try again."
        composeTestRule.onNode(isDialog()).assertDoesNotExist()
        composeTestRule.onNodeWithText(dialogMessage).assertDoesNotExist()

        mutableStateFlow.update {
            it.copy(dialog = VaultAddEditState.DialogState.Fido2MasterPasswordError)
        }

        composeTestRule
            .onNodeWithText(dialogMessage)
            .assertIsDisplayed()
            .assert(hasAnyAncestor(isDialog()))

        composeTestRule
            .onAllNodesWithText(text = "Okay")
            .filterToOne(hasAnyAncestor(isDialog()))
            .performClick()
        verify {
            viewModel.trySendAction(
                VaultAddEditAction.Common.RetryFido2PasswordVerificationClick,
            )
        }
    }

    @Test
    fun `fido2 pin prompt dialog should display based on state`() {
        val dialogTitle = "Verify PIN"
        composeTestRule.onNode(isDialog()).assertDoesNotExist()
        composeTestRule.onNodeWithText(dialogTitle).assertDoesNotExist()

        mutableStateFlow.update {
            it.copy(dialog = VaultAddEditState.DialogState.Fido2PinPrompt)
        }

        composeTestRule
            .onNodeWithText(dialogTitle)
            .assertIsDisplayed()
            .assert(hasAnyAncestor(isDialog()))

        composeTestRule
            .onAllNodesWithText(text = "Cancel")
            .filterToOne(hasAnyAncestor(isDialog()))
            .performClick()
        verify {
            viewModel.trySendAction(
                VaultAddEditAction.Common.DismissFido2VerificationDialogClick,
            )
        }

        composeTestRule
            .onAllNodesWithText(text = "PIN")
            .filterToOne(hasAnyAncestor(isDialog()))
            .performTextInput("PIN")
        composeTestRule
            .onAllNodesWithText(text = "Submit")
            .filterToOne(hasAnyAncestor(isDialog()))
            .performClick()

        verify {
            viewModel.trySendAction(
                VaultAddEditAction.Common.PinFido2VerificationSubmit(
                    pin = "PIN",
                ),
            )
        }
    }

    @Test
    fun `fido2 pin error dialog should display based on state`() {
        val dialogMessage = "Invalid PIN. Try again."
        composeTestRule.onNode(isDialog()).assertDoesNotExist()
        composeTestRule.onNodeWithText(dialogMessage).assertDoesNotExist()

        mutableStateFlow.update {
            it.copy(dialog = VaultAddEditState.DialogState.Fido2PinError)
        }

        composeTestRule
            .onNodeWithText(dialogMessage)
            .assertIsDisplayed()
            .assert(hasAnyAncestor(isDialog()))

        composeTestRule
            .onAllNodesWithText(text = "Okay")
            .filterToOne(hasAnyAncestor(isDialog()))
            .performClick()
        verify {
            viewModel.trySendAction(
                VaultAddEditAction.Common.RetryFido2PinVerificationClick,
            )
        }
    }

    @Test
    fun `fido2 pin set up prompt dialog should display based on state`() {
        val dialogMessage = "Enter your PIN code"
        composeTestRule.onNode(isDialog()).assertDoesNotExist()
        composeTestRule.onNodeWithText(dialogMessage).assertDoesNotExist()

        mutableStateFlow.update {
            it.copy(dialog = VaultAddEditState.DialogState.Fido2PinSetUpPrompt)
        }

        composeTestRule
            .onNodeWithText(dialogMessage)
            .assertIsDisplayed()
            .assert(hasAnyAncestor(isDialog()))

        composeTestRule
            .onAllNodesWithText(text = "Cancel")
            .filterToOne(hasAnyAncestor(isDialog()))
            .performClick()
        verify {
            viewModel.trySendAction(
                VaultAddEditAction.Common.DismissFido2VerificationDialogClick,
            )
        }

        composeTestRule
            .onAllNodesWithText(text = "PIN")
            .filterToOne(hasAnyAncestor(isDialog()))
            .performTextInput("1234")
        composeTestRule
            .onAllNodesWithText(text = "Submit")
            .filterToOne(hasAnyAncestor(isDialog()))
            .performClick()

        verify {
            viewModel.trySendAction(
                VaultAddEditAction.Common.PinFido2SetUpSubmit(
                    pin = "1234",
                ),
            )
        }
    }

    @Test
    fun `fido2 pin set up error dialog should display based on state`() {
        val dialogMessage = "The PIN field is required."
        composeTestRule.onNode(isDialog()).assertDoesNotExist()
        composeTestRule.onNodeWithText(dialogMessage).assertDoesNotExist()

        mutableStateFlow.update {
            it.copy(dialog = VaultAddEditState.DialogState.Fido2PinSetUpError)
        }

        composeTestRule
            .onNodeWithText(dialogMessage)
            .assertIsDisplayed()
            .assert(hasAnyAncestor(isDialog()))

        composeTestRule
            .onAllNodesWithText(text = "Okay")
            .filterToOne(hasAnyAncestor(isDialog()))
            .performClick()
        verify {
            viewModel.trySendAction(
                VaultAddEditAction.Common.PinFido2SetUpRetryClick,
            )
        }
    }

    @Suppress("MaxLineLength")
    @Test
    fun `clicking dismiss dialog on Fido2Error dialog should send Fido2ErrorDialogDismissed action`() {
        mutableStateFlow.value = DEFAULT_STATE_LOGIN.copy(
            dialog = VaultAddEditState.DialogState.CredentialError("mockMessage".asText()),
        )

        composeTestRule
            .onAllNodesWithText(text = "Okay")
            .filterToOne(hasAnyAncestor(isDialog()))
            .performClick()

        verify {
            viewModel.trySendAction(
                VaultAddEditAction.Common.CredentialErrorDialogDismissed("mockMessage".asText()),
            )
        }
    }

    @Test
    fun `close button should update according to state`() {
        composeTestRule.onNodeWithContentDescription("Close").assertIsDisplayed()

        mutableStateFlow.update {
            it.copy(shouldShowCloseButton = false)
        }

        composeTestRule.onNodeWithContentDescription("Close").assertDoesNotExist()
    }

    @Test
    fun `clicking close button should send CloseClick action`() {
        composeTestRule
            .onNodeWithContentDescription(label = "Close")
            .performClick()

        verify {
            viewModel.trySendAction(
                VaultAddEditAction.Common.CloseClick,
            )
        }
    }

    @Test
    fun `clicking save button should send SaveClick action`() {
        composeTestRule
            .onNodeWithText(text = "Save")
            .performClick()

        verify {
            viewModel.trySendAction(
                VaultAddEditAction.Common.SaveClick,
            )
        }
    }

    @Suppress("MaxLineLength")
    @Test
    fun `clicking dismiss dialog button on InitialAutofillPrompt should send InitialAutofillDialogDismissed action`() {
        mutableStateFlow.value = DEFAULT_STATE_LOGIN_DIALOG.copy(
            dialog = VaultAddEditState.DialogState.InitialAutofillPrompt,
        )

        composeTestRule
            .onAllNodesWithText(text = "Okay")
            .filterToOne(hasAnyAncestor(isDialog()))
            .performClick()

        verify {
            viewModel.trySendAction(
                VaultAddEditAction.Common.InitialAutofillDialogDismissed,
            )
        }
    }

    @Test
    fun `InitialAutofillPrompt is shown according to state`() {
        mutableStateFlow.value = DEFAULT_STATE_LOGIN

        composeTestRule.assertNoDialogExists()

        mutableStateFlow.value = DEFAULT_STATE_LOGIN_DIALOG.copy(
            dialog = VaultAddEditState.DialogState.InitialAutofillPrompt,
        )

        composeTestRule
            .onAllNodesWithText("Bitwarden Autofill Service")
            .filterToOne(hasAnyAncestor(isDialog()))
            .assertIsDisplayed()

        mutableStateFlow.value = DEFAULT_STATE_LOGIN_DIALOG.copy(
            dialog = VaultAddEditState.DialogState.Loading("Loading".asText()),
        )
    }

    @Test
    fun `clicking dismiss dialog button should send DismissDialog action`() {
        mutableStateFlow.value = DEFAULT_STATE_LOGIN_DIALOG

